# ContadorMoedas

./: .gitignore  CMakeLists.txt  Makefile  README.md  coin_counter  coin_counter.cpp  coin_counter.h  coin_counter.py  coin_counter_ml  coin_counter_ml.cpp  requirements.txt  train_yolo.py
data/cls_dataset/: train.cache
examples/: 100_1477154484.jpgZone.Identifier
models/: classes.txt
runs/moedas_cls/: args.yaml  results.csv
runs/moedas_cls/weights/: best.pt  last.pt
